2005-04-18  Mark Kettenis  <kettenis@gnu.org>

	* hppabsd-nat.c: Update copyright year.  Include "target.h" and
	"inf-ptrace.h".
	(hppabsd_fetch_registers): Renamed from fetch_inferior_registers;
	made static.
	(hppabsd_store_registers): Renamed from store_inferior_registers;
	made static.
	(_initialize_hppabsd_nat): New function and prototype.
	* config/pa/obsd.mh (NATDEPFILES): Remove infptrace.o and
	inftarg.o.  Add inf-ptrace.o.
	(NAT_FILE): Remove.
	* Makefile.in (hppabsd-nat.o): Update dependencies.

2005-04-17  Mark Kettenis  <kettenis@gnu.org>

	* pa64solib.c, pa64solib.h: Remove files.
	* Makefile.in (pa64solib_h): Remove variable
	(pa64solib.o): Remove dependency.

2005-04-16  Mark Kettenis  <kettenis@gnu.org>

	* ppcobsd-nat.c: Update copyright year.  Include "inf-ptrace.h".
	(ppcobsd_fetch_registers): Renamed from fetch_inferior_registers;
	made static.
	(ppcobsd_store_registers): Renamed from store_inferior_registers;
	made static.
	(_initialize_ppcobsd_nat): Construct and add target vector.
	* config/powerpc/obsd.mh (NATDEPFILES): Remove infptrace.o and
	inftarg.o.  Add inf-ptrace.o.
	(NAT_FILE): Remove.
	* Makefile.in (ppcobsd-nat.o): Update dependencies.

	* ppcobsd-tdep.c: Include "floatformat.h".
	(ppcobsd_init_abi): Set long_double_bit and long_double_format.
	* Makefile.in (ppcobsd-tdep.o): Update dependencies.

	* ppcobsd-tdep.c: Fix typo in comment.
	(_initialize_ppcobsd_tdep): Register GDB_OSABI_OPENBSD_ELF for
	bfd_arch_rs6000 too.

2005-04-15  Kevin Buettner  <kevinb@redhat.com>

	* remote.c (remote_get_thread_local_address): Throw a more
	meaningful exception when remote target doesn't have support
	for the qGetTLSAddr packet.

2005-04-15  Kevin Buettner  <kevinb@redhat.com>

	* remote.c (remote_protocol_qGetTLSAddr): New static global variable.
	(set_remote_protocol_qGetTLSAddr_packet_cmd)
	(show_remote_protocol_qGetTLSAddr_packet_cmd)
	(remote_get_thread_local_address): New functions.